# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/IExApiV1.java
@@ -1768,4 +1768,22 @@ public interface IExApiV1 {
         public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
     }
 
+    public interface IDocumentosSiglaReclassificarPost extends ISwaggerMethod {
+        public static class Request implements ISwaggerRequest {
+            public String sigla;
+            public String novaClassificacao;
+            public String data;
+            public String matriculaResponsavel;
+            public String motivo;
+            
+        }
+
+        public static class Response implements ISwaggerResponse {
+            public String sigla;
+            public String status;
+        }
+
+        public void run(Request req, Response resp, ExApiV1Context ctx) throws Exception;
+    }
+
 }
