# sigaex/src/main/resources/br/gov/jfrj/siga/ex/api/v1/swagger.yaml
@@ -2804,6 +2804,37 @@ paths:
           description: Error ocurred
           schema:
             $ref: "#/definitions/Error"
+  
+  /documentos/{sigla}/reclassificar:
+    post:
+      description: "Utilize este método para reclassificar o documento."
+      consumes: [ "application/x-www-form-urlencoded" ]
+      tags: [ acao ]
+      security:
+        - Bearer: [ ]
+      parameters:
+        - $ref: "#/parameters/sigla"
+        - $ref: "#/parameters/classificacao"  
+        - $ref: "#/parameters/data1"
+        - $ref: "#/parameters/matricula"
+        - $ref: "#/parameters/motivo"  
+      summary: Reclassificar documento
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              sigla:
+                description: Sigla do documento
+                type: string
+              status:
+                type: string
+                default: "OK"
+        500:
+          description: Error ocurred
+          schema:
+            $ref: "#/definitions/Error"
             
   /numeracao-expediente:
     post:
